Add extra9-7, teoria lema gauss Correcciones en links de otros ejercicios de la guia 7

--- a/7-guia/ejercicios-7-extra/ej-extra-4-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-4-7.tex
@@ -45,7 +45,7 @@ que quizás tenés al lado y que no te deja tiempo para pensar. Es puro factoreo
 
 Ahora factorizamos en irreducibles, que son polinomios mónicos que  solo se dividen por
 sí mismos y por 1. Para tener una mejor explicación
-\hyperlink{7-teoria:irreducibles}{clickeá acá! Y vas a la teoría del apunte.}
+\hyperlink{teoria-7:irreducibles}{clickeá acá! Y vas a la teoría del apunte.}
 
 
 \textit{factorizaciones: }\par
