--- a/7-guia/ejercicios-7-extra/ej-extra-6-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-6-7.tex
@@ -77,13 +77,13 @@
 
         \textbf{Rta:}\par
         $\therefore f = X(X+3)( X - \frac{1}{3} )( X - (\frac{1}{2} + \frac{\sqrt 3}{2}i) )( X - (\frac{1}{2} - \frac{\sqrt 3}{2}i) ) \en \complejos$
-        con todos sus factores de multiplicidad 1 y por lo tanto \hyperlink{7-teoria:irreducibles}{irreducibles}. \par
+        con todos sus factores de multiplicidad 1 y por lo tanto \hyperlink{teoria-7:irreducibles}{irreducibles}. \par
         $\therefore f = X(X+3)( X - \frac{1}{3} )(X^2-X+1) \en \reales$
         con 3 factores de multiplicidad 1 y 1 de multiplicidad 2 pero de raíces complejas
-        y por lo tanto \hyperlink{7-teoria:irreducibles}{irreducibles} en $\reales$. \par
+        y por lo tanto \hyperlink{teoria-7:irreducibles}{irreducibles} en $\reales$. \par
         $\therefore f = X(X+3)( X - \frac{1}{3} )(X^2-X+1) \en \racionales$
         con 3 factores de multiplicidad 1 y 1 de multiplicidad 2 pero de raíces complejas
-        y por lo tanto \hyperlink{7-teoria:irreducibles}{irreducibles} en $\racionales$.
+        y por lo tanto \hyperlink{teoria-7:irreducibles}{irreducibles} en $\racionales$.
 \end{enumerate}
 
 
