--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -45,7 +45,7 @@
 \usepackage{hyperref} % para que haya links navegables en el PDF
 \hypersetup{
     colorlinks=true,
-    linkcolor=blue!90!black,
+    linkcolor=blue,
     %filecolor=magenta,
     urlcolor=OliveGreen!90!black,
     pdftitle={Álgebra I - Resuelta, sueltísima},
