--- a/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
@@ -1,9 +1,9 @@
-\ejExtra
+\begin{enunciado}{\ejercicio}
 Sea $\relacion \subseteq \partes(\naturales) \times \partes(\naturales)$ la relación de equivalencia
 $\to X \relacion Y \sisolosi X \triangle Y \subseteq \set{4,5,6,7,8}$.\\
 ¿Cuántos conjuntos hay en la clase de equivalencia de $X = \set{x \en \naturales : x \geq 6}$?
 
-\separadorCorto
+\end{enunciado}
 
 \begin{enumerate}
 	\item La relación toma valores de $\partes(\naturales)$
