Corrección 27-1 Elimino temporalmente ejercicio extra guia 4

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -152,6 +152,7 @@
 \newcommand{\yellow}[1]{\textcolor{YellowOrange}{#1}}
 \newcommand{\magenta}[1]{\textcolor{magenta}{#1}}
 \newcommand{\purple}[1]{\textcolor{purple}{#1}}
+\newcommand{\transparente}[1]{\color[rgb]{1,1,1,0.5}{#1}}
 
 % Conjuntos entre llaves y paréntesis
 % te ahorrás escribir los \left y \right, así dejando el código más legible.
