--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -30,6 +30,9 @@
 \usepackage{venndiagram} % Para los diagramas de Venn
 \usepackage{listings} % Escribir código
 
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+\usepackage{algorithmicx}
 
 \usepackage{fancyhdr} % Encabezados y pie de páginas
 % \usepackage{lipsum} % dummy text
