--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -66,7 +66,7 @@
 \newcommand{\HI}[1]{\underbrace{#1}_{\text{HI}}}
 
 % % enteros
-\def\divideA{\, | \,}
+\def\divideA{\, \big| \,}
 \def\noDivide{\centernot\divideA}
 \def\congruente{\, \equiv \,}
 \newcommand{\congruencia}[3]{#1 \equiv #2 \;(#3)}
