Puliendo las notas teóricas 1 add ej 14i

--- a/1-guia/ejercicios-1/ej-13-1.tex
+++ b/1-guia/ejercicios-1/ej-13-1.tex
@@ -35,7 +35,7 @@
             F & F & F & V   & F     & F     & F             & F                   & F                         \\
             \hline
           \end{array}
-        $\\
+        $\par
         Hay distribución entre la resta y una diferencias simétrica.
 
 \item \hacer
